# Controllable-Face-Generation-VAE-by-farhad-dalirani

./: .gitignore  CONFIGURABLE_LOSS_FUNCTIONS.md  GPU_TROUBLESHOOTING.md  LOGGING_GUIDE.md  LOSS_ANALYSIS_SYSTEM.md  PyTorch_Conversion.md  README.md  TESTING_SUMMARY.md  ULTRA_HIGH_QUALITY_TRAINING.md  UNIFIED_CONFIGURATION_SYSTEM.md  UNIFIED_TRAINING_SYSTEM.md  VAE_IMPROVEMENTS.md  config_loader.py  debug_config.py  demo_loss_analysis.json  detailed_loss_analysis.json  example_loss_analysis.py  extract_vector_from_label_pytorch.py  gui_pytorch.py  image_upscaling.py  loss_analysis.json  loss_analysis_system.py  loss_calculator.py  loss_weight_manager.py  main.py  monitor_training_progress.py  mse_priority_manager.py  perceptual_loss.py  pyproject.toml  test_high_res_generation.py  train.py  train_VAE.py  train_VAE_improved.py  train_VAE_unified.py  train_optimized_fast_high_quality.py  train_ultra_high_quality.py  train_unified.py  training_reporter.py  training_strategies.py  training_utilities.py  (+5 more)
config/: config_loss_analysis.json  config_mse_l1.json  config_mse_only.json  config_unified.json
legacy/: train_VAE_configurable.py  train_VAE_pytorch.py  train_fast_high_quality.py
logs/: demo_loss_analysis.json  detailed_loss_analysis.json  experiments_log.jsonl  experiments_log.jsonl.bak  loss_analysis.json  research_loss_analysis.json  research_loss_analysis.json.bak
test/: README.md  _git_train_unified_latest.py  analyze_resolution_impact.py  compare_loss_functions.py  compare_model_sizes.py  compare_vae_quality.py  create_training_progress_video.py  synthesis.py  (+28 more)
(+4 files in other folders)
